k8s/backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: joblisting-backend-deployment
  namespace: joblisting
spec:
  replicas: 1
  selector:
    matchLabels:
      app: joblisting-backend
  template:
    metadata:
      labels:
        app: joblisting-backend
    spec:
      containers:
        - name: joblisting-backend
          image: jmmanu/jobportal-backend:latest    # <-- FIXED IMAGE NAME
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
